--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,7 @@ languageCode: "en-us"
 title: "PsyLink"
 resourceDir: ".resources"
 relativeurls: true
-taxonomies:
-    tag: tags
+taxonomies: []
 permalinks:
     prototypes: :slug
     circuits: :slug
