update base url

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://psylink.uber.space/"
+baseURL: "https://psylink.me/"
 languageCode: "en-us"
 title: "PsyLink"
 resourceDir: ".resources"
