tweaked layout to show metadata only for components

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,12 @@ permalinks:
     software: :slug
 params:
     dateFmt: "2006-01-02"
+    ComponentSections:
+        - prototypes
+        - circuits
+        - boards
+        - textiles
+        - software
 outputs:
     home: ["HTML", "RSS"]
     section: ["HTML"]
