rename "public" directory to ".public"
after the 6243rd time that I copied some resource into public/img/...
rather than static/img/... and then lost it because it got autodeleted.
-_-

if I don't see the directory, I can't put files there manually :)

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: "https://psylink.me/"
 languageCode: "en-us"
 title: "PsyLink"
 resourceDir: ".resources"
+publishDir: ".public"
 relativeurls: true
 taxonomies: []
 permalinks:
